--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,5 +1,5 @@
 .btn {
-  padding: 0.6rem ;
+  padding: 0.6rem;
   border-radius: 0.25rem;
   outline: none;
   border: none;
@@ -31,6 +31,7 @@
 .btn--medium:hover,
 .btn--large:hover {
   background: white;
+  border: 2px solid #99fff5;
   color: #1b1e23;
   transition: all 0.3s ease-out;
 }
