--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -188,7 +188,7 @@
 
 /* CARD PORTRAIT */
 .cards-portrait {
-  max-width: 12vw;
+  max-width: 10vw;
   margin: 1rem;
 }
 
